feat(vmConfig): 虚拟机配置操作相关
